# ChangeLog for app-i18n/im-chooser
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/im-chooser/ChangeLog,v 1.4 2011/11/28 08:10:06 naota Exp $

*im-chooser-1.5.2 (28 Nov 2011)

  28 Nov 2011; Naohiro Aota <naota@gentoo.org> +im-chooser-1.5.2.ebuild:
  Version bumped. Bug #391801

*im-chooser-1.5.1 (22 Oct 2011)

  22 Oct 2011; Naohiro Aota <naota@gentoo.org> +im-chooser-1.5.1.ebuild,
  +files/im-chooser-1.5.1-imchooserui.patch:
  Version bump.

*im-chooser-1.4.2 (06 Apr 2011)

  06 Apr 2011; MATSUU Takuto <matsuu@gentoo.org> +im-chooser-1.4.2.ebuild:
  Version bumped.

*im-chooser-1.4.1 (14 Jan 2011)

  14 Jan 2011; MATSUU Takuto <matsuu@gentoo.org> +im-chooser-1.4.1.ebuild,
  +metadata.xml:
  Initial import.
